[gd_scene load_steps=3 format=3 uid="uid://cqfm3l65110yn"]

[ext_resource type="Script" path="res://Scripts/MainMenu/Edit.gd" id="1_6w7v4"]
[ext_resource type="PackedScene" uid="uid://barcffdh4nt23" path="res://Prefabs/MainMenu/LevelList/LevelList.tscn" id="2_mb7u1"]

[node name="Edit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6w7v4")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
offset_left = 533.5
offset_right = 618.5
offset_bottom = 31.0

[node name="Edit" type="Button" parent="AspectRatioContainer/HBoxContainer"]
layout_mode = 2
offset_right = 38.0
offset_bottom = 31.0
text = "Edit"

[node name="New" type="Button" parent="AspectRatioContainer/HBoxContainer"]
layout_mode = 2
offset_left = 42.0
offset_right = 85.0
offset_bottom = 31.0
text = "New"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="SubMenu" type="ScrollContainer" parent="AspectRatioContainer2"]
custom_minimum_size = Vector2i(512, 256)
layout_mode = 2
offset_left = 268.2
offset_right = 883.8
offset_bottom = 615.6
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="AspectRatioContainer2/SubMenu"]
layout_mode = 2
offset_right = 1244.0
offset_bottom = 616.0
columns = 2

[node name="LevelList" parent="AspectRatioContainer2/SubMenu/GridContainer" instance=ExtResource("2_mb7u1")]
custom_minimum_size = Vector2i(616, 616)
layout_mode = 2
offset_right = 616.0
offset_bottom = 616.0

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer2/SubMenu/GridContainer"]
custom_minimum_size = Vector2i(624, 512)
layout_mode = 2
offset_left = 620.0
offset_right = 1244.0
offset_bottom = 616.0
color = Color(0.517647, 0.517647, 0.517647, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="AspectRatioContainer2/SubMenu/GridContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "New Level
"

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer2/SubMenu/GridContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="AspectRatioContainer2/SubMenu/GridContainer/ColorRect/MarginContainer"]
layout_mode = 2
offset_right = 561.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Name"

[node name="Start" type="Button" parent="AspectRatioContainer2/SubMenu/GridContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.975
anchor_right = 1.0
anchor_bottom = 0.975
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[connection signal="pressed" from="AspectRatioContainer/HBoxContainer/Edit" to="." method="_on_edit_level"]
[connection signal="pressed" from="AspectRatioContainer/HBoxContainer/New" to="." method="_on_new_level"]
[connection signal="pressed" from="AspectRatioContainer2/SubMenu/GridContainer/ColorRect/Start" to="." method="start_new_level"]
